gcc/testsuite/gdc.test/runnable/extra-files/minimal/object.d
module object;

extern(C) void _Dmain();

extern(C) void main()
{
    _Dmain();
}
