gcc/testsuite/gdc.test/fail_compilation/fail6458.d

void main()
{
    char d = 'ä';
}
